# Hash_Guard

./: .gitignore  CMakeLists.txt  README.md
data/: base.csv
include/: hash_utils.h  path_queue.h  scanner.h  scanner_dll.h  scanner_report.h
src/: hash_utils.cpp  main.cpp  path_queue.cpp  scanner.cpp  scanner_dll.cpp  scanner_report.cpp
tests/: CMakeLists.txt  hash_utils_test.cpp  path_queue_test.cpp  scanner_test.cpp
